--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
-        "axios": ">=0.21.1",
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "cross-env": "^7.0",
         "jquery": "^3.6.0",
